added 3 files and 1 modified index

--- a/Home.html
+++ b/Home.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <title>
-            Welcome!
+            Home!
         </title>
     </head>
     <body>
-        <h2>Welcome</h2>
+        <h2>Home</h2>
       <!--Lists-->
       <!--
           1.Ordered Lists
@@ -24,7 +24,6 @@
         <li>Dashboard</li>
         <li>Contact</li>
     </ul> -->
-
     <ul>
         <li>
             <a href="Home.html">Home</a>
