added css and image file and 2 modified files are home and contact

--- a/Contact.html
+++ b/Contact.html
@@ -4,9 +4,11 @@
         <title>
            Contact!
           </title>
+          <link rel="stylesheet" href="Contact.css">
+        </head>
     </head>
     <body>
-        <h2>Contact</h2>
+        <h1>Contact</h1>
       <!--Lists-->
       <!--
           1.Ordered Lists
@@ -31,5 +33,24 @@
         <li><a href="Dashboard.html">Dashboard</a></li>
         <li><a href="Contact.html">Contact</a></li>
     </ul>
+    <!--Tables and styles-->
+    <h2>Contact Info</h2>
+    <table>
+        <tr><!--Rows-->
+            <th>Name</th><!--Columns-->
+            <th>Description</th>
+            <th>Phone number</th>
+        </tr>
+        <tr><!--Rows-->
+            <td>shirisha</td><!--Columns-->
+            <td>Developer</td>
+            <td>234567</td>
+        </tr>
+        <tr><!--Rows-->
+            <td>Jayam</td><!--Columns-->
+            <td>Developer</td>
+            <td>345678</td>
+        </tr>
+    </table>
     </body>
 </html>
