--- a/Home.html
+++ b/Home.html
@@ -31,5 +31,6 @@
         <li><a href="Dashboard.html">Dashboard</a></li>
         <li><a href="Contact.html">Contact</a></li>
     </ul>
+    <img src="nature-images.jpg" width="300" height="200">
     </body>
 </html>
